added tslint. updated script to conform to tslint stlye. added babel for polyfills. added webpack to bundle and polyfill for IE10.

--- a/tsconfig.module.json
+++ b/tsconfig.module.json
@@ -2,12 +2,12 @@
     "compilerOptions": {
         "module": "esnext",
         "target": "esnext",
-        "outDir": "dist",
+        "outDir": "dist/esnext",
         "lib": [
             "dom",
             "es6"
         ],
         "removeComments": true
     },
-    "files": [ "index.ts" ]
+    "files": [ "./src/index.ts" ]
 }
