--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "sharepoint-utilities",
-  "version": "1.0.11",
-  "description": "A set of convenience methods for SharePoint.",
-  "author": "Dennis George",
-  "main": "index.js",
+  "version": "2.0.0",
+  "description": "A set of convenience methods for SharePoint. Now usable by ie10 via babel and webpack",
+  "author": "Dennis George & Matthew Meehan",
+  "main": "./dist/index.js",
   "types": "index.d.ts",
   "repository": {
     "type": "git",
@@ -15,16 +15,29 @@
   ],
   "license": "MIT",
   "scripts": {
-    "prepublishOnly": "npm run docs && tsc && tsc -p tsconfig.module.json",
+    "build": "webpack-cli && tsc -p tsconfig.module.json",
+    "prepublishOnly": "tsc && tsc -p tsconfig.module.json",
     "docs": "typedoc --mode file --theme markdown --includeDeclarations --excludeExternals --out ./docs index.d.ts"
   },
   "dependencies": {
-    "@types/core-js": "^0.9.46",
-    "@types/sharepoint": "^2016.1.0"
+    "@types/sharepoint": "^2013.1.10",
+    "@babel/polyfill": "^7.0.0-beta.40",
+    "core-js": "^2.5.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
+    "babel-loader": "^8.0.0-beta.2",
+    "ts-loader": "^4.0.0",
+    "tslint": "^5.9.1",
+    "tslint-config-airbnb": "^5.7.0",
     "typedoc": "^0.9.0",
     "typedoc-plugin-markdown": "^1.0.12",
-    "typescript": "^2.6.2"
-  }
+    "typescript": "^2.6.2",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.9"
+  },
+  "browserslist": [
+    "ie 10"
+  ]
 }
