--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,12 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es5",
+        "outDir": "dist",
         "lib": [
             "dom",
             "es6"
         ],
         "removeComments": true
     },
-    "files": [ "index.ts" ]
+    "files": [ "./src/index.ts" ]
 }
