Exporting only functions now, no runtime mixins. tried to include babel polyfill and lodash, exluding lodash for now. moved tests to /src.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,9 @@
         "module": "commonjs",
         "target": "es5",
         "outDir": "dist",
-        "lib": [
-            "dom",
-            "es6"
-        ],
-        "removeComments": true
+        "lib": ["dom", "es6"],
+        "removeComments": true,
+        "allowSyntheticDefaultImports": true
     },
-    "files": [ "./src/index.ts" ]
+    "files": ["./src/index.ts"]
 }
