--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "description": "A set of convenience methods for SharePoint. Now usable by ie10 via babel and webpack",
   "author": "Dennis George & Matthew Meehan",
-  "main": "./dist/esnext/index.js",
+  "main": "./src/index.ts",
   "types": "./src/index.d.ts",
   "repository": {
     "type": "git",
@@ -22,13 +22,16 @@
     "docs": "typedoc --mode file --theme markdown --includeDeclarations --excludeExternals --out ./docs index.d.ts"
   },
   "dependencies": {
-    "@types/sharepoint": "^2013.1.10",
     "@babel/polyfill": "^7.0.0-beta.40",
-    "core-js": "^2.5.3"
+    "@types/sharepoint": "^2013.1.10",
+    "@types/jquery": "^1.10.34",
+    "core-js": "^2.5.3",
+    "lodash-es": "^4.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.40",
     "@babel/preset-env": "^7.0.0-beta.40",
+    "@types/lodash-es": "^4.17.0",
     "babel-loader": "^8.0.0-beta.2",
     "ts-loader": "^4.0.0",
     "tslint": "^5.9.1",
