--- a/tsconfig.module.json
+++ b/tsconfig.module.json
@@ -1,13 +1,11 @@
 {
     "compilerOptions": {
         "module": "esnext",
-        "target": "esnext",
         "outDir": "dist/esnext",
-        "lib": [
-            "dom",
-            "es6"
-        ],
-        "removeComments": true
+        "target": "esnext",
+        "lib": ["dom", "es6"],
+        "declaration": true,
+        "allowSyntheticDefaultImports": true
     },
-    "files": [ "./src/index.ts" ]
+    "files": ["./src/index.ts"]
 }
